crucible-syntax/test-data/simulator-tests/assert.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====

Prove:
  test-data/simulator-tests/assert.cbl:4:5: error: in main
  x is true
  cx@0:b
COUNTEREXAMPLE
